BE: Added docs for registration.
